[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Ranking.gd" type="Script" id=1]
[ext_resource path="res://Audio/Scenes/AudioStreamPlayer.gd" type="Script" id=2]
[ext_resource path="res://Art/Prototype.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/WolrdBG.PNG" type="Texture" id=4]
[ext_resource path="res://Scenes/Loading.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/move.svg" type="Texture" id=7]
[ext_resource path="res://Scenes/Camera.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id=2]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9 ),
"transitions": PoolRealArray( 2.92817, 0.420448, 1 ),
"update": 0,
"values": [ 1.0, 0.79, 0.71 ]
}

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment(){
    vec2 newuv = UV;
    newuv.x += TIME*0.05;
    vec4 c = texture(TEXTURE, newuv);
    COLOR = c;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=7]

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[node name="Ranking" type="Node"]
script = ExtResource( 1 )

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Button_Req" type="Button" parent="Hud"]
visible = false
margin_left = 666.488
margin_top = 553.165
margin_right = 750.488
margin_bottom = 580.165
text = "Request"

[node name="Output" type="RichTextLabel" parent="Hud"]
visible = false
margin_left = 770.0
margin_top = 68.0
margin_right = 1020.0
margin_bottom = 587.0
custom_styles/normal = SubResource( 1 )
text = "...
"

[node name="ColorRect" type="ColorRect" parent="Hud"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Hud/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -11.0
margin_right = 93.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 91.1831, 7.43433 )
text = "Conectando ao servidor........."
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hud/ColorRect/Label"]
autoplay = "Start"
anims/Fade = SubResource( 2 )
anims/Start = SubResource( 3 )

[node name="Loading" parent="Hud" instance=ExtResource( 5 )]
position = Vector2( 1147.37, 680.743 )

[node name="BackGround" type="CanvasLayer" parent="."]
layer = -1

[node name="BG_" type="Polygon2D" parent="BackGround"]
visible = false
texture = ExtResource( 4 )
texture_offset = Vector2( 0, 9.77 )
polygon = PoolVector2Array( -25.432, -25.3654, 1295.05, -15.8953, 1301.87, 736.161, -20.4774, 738.433 )

[node name="BG" type="TextureRect" parent="BackGround"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0.000366211, 5.03464 )
anchor_mode = 0
current = true
script = ExtResource( 8 )

[node name="Art" type="Node" parent="."]

[node name="Title" type="Label" parent="Art"]
anchor_right = 1.0
margin_top = 81.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.509804, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 0
text = "Setmind Cup 2019"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Art"]
position = Vector2( 633.316, 104.288 )
rotation = -1.57079
scale = Vector2( 0.0345664, 388.331 )
texture = SubResource( 8 )

[node name="Pos" type="Sprite" parent="."]
visible = false
position = Vector2( 141.302, 64 )
scale = Vector2( 0.0728836, 0.0728836 )
texture = ExtResource( 7 )

[node name="End" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 101.302, 64.923 )
scale = Vector2( 0.0728836, 0.0728836 )
texture = ExtResource( 7 )

[node name="Ranking" type="Node" parent="."]

[node name="TimerPos" type="Timer" parent="."]

[node name="TimerReq" type="Timer" parent="."]
wait_time = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 530.842, 503.444 )
zoom = Vector2( 1.5, 1.5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
